[yafeng Wang] fix: fix #main width height and overflow

--- a/exercise-3/styles/index.css
+++ b/exercise-3/styles/index.css
@@ -46,6 +46,13 @@ h1 {
     padding: 40px;
     text-align: center;
     margin: 0 auto;
+    width: 500px;
+    height: 800px;
+    overflow: auto;
+}
+/*隐藏滚动条*/
+#main::-webkit-scrollbar {
+    width: 0px;
 }
 
 h2 {
